--- a/websiteautomation/test-output/old/Default suite/classes.html
+++ b/websiteautomation/test-output/old/Default suite/classes.html
@@ -23,7 +23,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateProduct</td>
+<td>validateProductSpecification</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateProductDescription</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
