--- a/websiteautomation/test-output/old/Suite1/classes.html
+++ b/websiteautomation/test-output/old/Suite1/classes.html
@@ -45,7 +45,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>click</td>
+<td>validateSearchedProduct</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
