--- a/websiteautomation/test-output/index.html
+++ b/websiteautomation/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\mohit.jaiswal\AppData\Local\Temp\testng-eclipse-322929452\testng-customsuite.xml</span>
+                    <span>C:\Users\mohit.jaiswal\AppData\Local\Temp\testng-eclipse-193450205\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods,   8 passed</span>
+                    <span class="method-stats">9 methods,   9 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -117,11 +117,6 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.konakart.script.ProductDetailsScript" hash-for-method="productReview(Rating: low to high)">productReview(Rating: low to high)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.konakart.script.ProductDetailsScript" hash-for-method="productReview(Most recent first)">productReview(Most recent first)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
@@ -132,12 +127,22 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.konakart.script.ProductDetailsScript" hash-for-method="validateProduct([Exclusive Dolby audio and dual-driver stereo speakers for immersive, virtual surround sound])">validateProduct([Exclusive Dolby audio and dual-driver stereo speakers for immersive, virtual surround sound])</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.konakart.script.ProductDetailsScript" hash-for-method="productReview(Rating: low to high)">productReview(Rating: low to high)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.konakart.script.ProductDetailsScript" hash-for-method="validateProduct([The De&#039;Longhi BCO 410 is a 15 bar espresso/filter coffee machine that will ensure you get the perfe...)">validateProduct([The De'Longhi BCO 410 is a 15 bar espresso/filter coffee machine that will ensure you get the perfe...)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.konakart.script.ProductDetailsScript" hash-for-method="validateProductDescription([Exclusive Dolby audio and dual-driver stereo speakers for immersive, virtual surround sound])">validateProductDescription([Exclusive Dolby audio and dual-driver stereo speakers for immersive, virtual surround sound])</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.konakart.script.ProductDetailsScript" hash-for-method="validateProductDescription([The De&#039;Longhi BCO 410 is a 15 bar espresso/filter coffee machine that will ensure you get the perfe...)">validateProductDescription([The De'Longhi BCO 410 is a 15 bar espresso/filter coffee machine that will ensure you get the perfe...)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.konakart.script.ProductDetailsScript" hash-for-method="validateProductSpecification">validateProductSpecification</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -182,14 +187,6 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="productReview(Rating: low to high)">
-                  </a> <!-- productReview(Rating: low to high) -->
-                  <span class="method-name">productReview</span>
-                  <span class="parameters">(Rating: low to high)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="productReview(Most recent first)">
                   </a> <!-- productReview(Most recent first) -->
                   <span class="method-name">productReview</span>
@@ -206,18 +203,33 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="validateProduct([Exclusive Dolby audio and dual-driver stereo speakers for immersive, virtual surround sound])">
-                  </a> <!-- validateProduct([Exclusive Dolby audio and dual-driver stereo speakers for immersive, virtual surround sound]) -->
-                  <span class="method-name">validateProduct</span>
+                  <a name="productReview(Rating: low to high)">
+                  </a> <!-- productReview(Rating: low to high) -->
+                  <span class="method-name">productReview</span>
+                  <span class="parameters">(Rating: low to high)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validateProductDescription([Exclusive Dolby audio and dual-driver stereo speakers for immersive, virtual surround sound])">
+                  </a> <!-- validateProductDescription([Exclusive Dolby audio and dual-driver stereo speakers for immersive, virtual surround sound]) -->
+                  <span class="method-name">validateProductDescription</span>
                   <span class="parameters">([Exclusive Dolby audio and dual-driver stereo speakers for immersive, virtual surround sound])</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="validateProduct([The De&#039;Longhi BCO 410 is a 15 bar espresso/filter coffee machine that will ensure you get the perfe...)">
-                  </a> <!-- validateProduct([The De'Longhi BCO 410 is a 15 bar espresso/filter coffee machine that will ensure you get the perfe...) -->
-                  <span class="method-name">validateProduct</span>
+                  <a name="validateProductDescription([The De&#039;Longhi BCO 410 is a 15 bar espresso/filter coffee machine that will ensure you get the perfe...)">
+                  </a> <!-- validateProductDescription([The De'Longhi BCO 410 is a 15 bar espresso/filter coffee machine that will ensure you get the perfe...) -->
+                  <span class="method-name">validateProductDescription</span>
                   <span class="parameters">([The De'Longhi BCO 410 is a 15 bar espresso/filter coffee machine that will ensure you get the perfect coffee experience, regardless of your])</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validateProductSpecification">
+                  </a> <!-- validateProductSpecification -->
+                  <span class="method-name">validateProductSpecification</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -225,7 +237,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\mohit.jaiswal\AppData\Local\Temp\testng-eclipse-322929452\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\mohit.jaiswal\AppData\Local\Temp\testng-eclipse-193450205\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -274,44 +286,48 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(8);
+data.addRows(9);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'clickOnSlideShow')
+data.setCell(0, 1, 'productReview')
 data.setCell(0, 2, 'com.konakart.script.ProductDetailsScript')
-data.setCell(0, 3, 4491);
+data.setCell(0, 3, 7706);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'productReview')
 data.setCell(1, 2, 'com.konakart.script.ProductDetailsScript')
-data.setCell(1, 3, 2439);
+data.setCell(1, 3, 7694);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'productReview')
 data.setCell(2, 2, 'com.konakart.script.ProductDetailsScript')
-data.setCell(2, 3, 2143);
+data.setCell(2, 3, 7631);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'productReview')
+data.setCell(3, 1, 'clickOnSlideShow')
 data.setCell(3, 2, 'com.konakart.script.ProductDetailsScript')
-data.setCell(3, 3, 2102);
+data.setCell(3, 3, 5555);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'validateProduct')
+data.setCell(4, 1, 'productReview')
 data.setCell(4, 2, 'com.konakart.script.ProductDetailsScript')
-data.setCell(4, 3, 1970);
+data.setCell(4, 3, 4638);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'validateProduct')
+data.setCell(5, 1, 'clickOnProductReview')
 data.setCell(5, 2, 'com.konakart.script.ProductDetailsScript')
-data.setCell(5, 3, 1902);
+data.setCell(5, 3, 769);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'clickOnProductReview')
+data.setCell(6, 1, 'validateProductSpecification')
 data.setCell(6, 2, 'com.konakart.script.ProductDetailsScript')
-data.setCell(6, 3, 1901);
+data.setCell(6, 3, 769);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'productReview')
+data.setCell(7, 1, 'validateProductDescription')
 data.setCell(7, 2, 'com.konakart.script.ProductDetailsScript')
-data.setCell(7, 3, 1125);
+data.setCell(7, 3, 389);
+data.setCell(8, 0, 8)
+data.setCell(8, 1, 'validateProductDescription')
+data.setCell(8, 2, 'com.konakart.script.ProductDetailsScript')
+data.setCell(8, 3, 384);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 18 seconds</span>
+              <span class="suite-total-time">Total running time: 35 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -344,40 +360,44 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">clickOnSlideShow</span>
-                <span class="method-start">6456 ms</span>
+                <span class="method-start">14475 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">validateProduct([Exclusive Dolby audio and dual-driver stereo speakers for immersive, virtual surround sound])</span>
-                <span class="method-start">12412 ms</span>
+                <span class="method-name">validateProductDescription([Exclusive Dolby audio and dual-driver stereo speakers for immersive, virtual surround sound])</span>
+                <span class="method-start">20923 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">validateProduct([The De'Longhi BCO 410 is a 15 bar espresso/filter coffee machine that will ensure you get the perfe...)</span>
-                <span class="method-start">14385 ms</span>
+                <span class="method-name">validateProductDescription([The De'Longhi BCO 410 is a 15 bar espresso/filter coffee machine that will ensure you get the perfe...)</span>
+                <span class="method-start">21312 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">validateProductSpecification</span>
+                <span class="method-start">21703 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">clickOnProductReview</span>
-                <span class="method-start">16290 ms</span>
+                <span class="method-start">22481 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">productReview(Most recent first)</span>
-                <span class="method-start">18247 ms</span>
+                <span class="method-start">23297 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">productReview(Oldest first)</span>
-                <span class="method-start">19373 ms</span>
+                <span class="method-start">27935 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">productReview(Rating: high to low)</span>
-                <span class="method-start">21477 ms</span>
+                <span class="method-start">35567 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">productReview(Rating: low to high)</span>
-                <span class="method-start">23620 ms</span>
+                <span class="method-start">43274 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-suite after">
+              <div class="configuration-test after">
                 <span class="method-name">endReport</span>
-                <span class="method-start">26098 ms</span>
-              </div> <!-- configuration-suite after -->
+                <span class="method-start">50970 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
