--- a/websiteautomation/test-output/old/Default suite/methods-alphabetical.html
+++ b/websiteautomation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="958a8d">  <td>19/10/14 23:25:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.clickOnProductReview()[pri:3, instance:com.konakart.script.ProductDetailsScript@56aac163]">clickOnProductReview</td> 
+<tr bgcolor="958a8d">  <td>19/10/15 16:14:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.clickOnProductReview()[pri:4, instance:com.konakart.script.ProductDetailsScript@56aac163]">clickOnProductReview</td> 
   <td>main@917819120</td>   <td></td> </tr>
-<tr bgcolor="958a8d">  <td>19/10/14 23:25:33</td>   <td>-9834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.clickOnSlideShow()[pri:1, instance:com.konakart.script.ProductDetailsScript@56aac163]">clickOnSlideShow</td> 
+<tr bgcolor="958a8d">  <td>19/10/15 16:14:38</td>   <td>-8006</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.clickOnSlideShow()[pri:1, instance:com.konakart.script.ProductDetailsScript@56aac163]">clickOnSlideShow</td> 
   <td>main@917819120</td>   <td></td> </tr>
-<tr bgcolor="7faa95">  <td>19/10/14 23:25:27</td>   <td>-16272</td> <td>&nbsp;</td><td title="&gt;&gt;DriverClass.configSetup()[pri:0, instance:com.konakart.script.ProductDetailsScript@56aac163]">&gt;&gt;configSetup</td> 
+<tr bgcolor="7faa95">  <td>19/10/15 16:14:23</td>   <td>-22466</td> <td>&nbsp;</td><td title="&gt;&gt;DriverClass.configSetup()[pri:0, instance:com.konakart.script.ProductDetailsScript@56aac163]">&gt;&gt;configSetup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@917819120</td>   <td></td> </tr>
-<tr bgcolor="7faa95">  <td>19/10/14 23:25:53</td>   <td>9808</td> <td title="&lt;&lt;DriverClass.endReport()[pri:0, instance:com.konakart.script.ProductDetailsScript@56aac163]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@917819120</td>   <td></td> </tr>
-<tr bgcolor="958a8d">  <td>19/10/14 23:25:45</td>   <td>1957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@56aac163]">productReview</td> 
+<tr bgcolor="7faa95">  <td>19/10/15 16:15:14</td>   <td>28490</td> <td>&nbsp;</td><td title="&lt;&lt;DriverClass.endReport()[pri:0, instance:com.konakart.script.ProductDetailsScript@56aac163]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@917819120</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>19/10/15 16:14:47</td>   <td>816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:5, instance:com.konakart.script.ProductDetailsScript@56aac163]">productReview</td> 
   <td>main@917819120</td>   <td></td> </tr>
-<tr bgcolor="958a8d">  <td>19/10/14 23:25:46</td>   <td>3083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@56aac163]">productReview</td> 
+<tr bgcolor="958a8d">  <td>19/10/15 16:14:51</td>   <td>5454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:5, instance:com.konakart.script.ProductDetailsScript@56aac163]">productReview</td> 
   <td>main@917819120</td>   <td></td> </tr>
-<tr bgcolor="958a8d">  <td>19/10/14 23:25:48</td>   <td>5187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@56aac163]">productReview</td> 
+<tr bgcolor="958a8d">  <td>19/10/15 16:14:59</td>   <td>13086</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:5, instance:com.konakart.script.ProductDetailsScript@56aac163]">productReview</td> 
   <td>main@917819120</td>   <td></td> </tr>
-<tr bgcolor="958a8d">  <td>19/10/14 23:25:50</td>   <td>7330</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@56aac163]">productReview</td> 
+<tr bgcolor="958a8d">  <td>19/10/15 16:15:07</td>   <td>20793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:5, instance:com.konakart.script.ProductDetailsScript@56aac163]">productReview</td> 
   <td>main@917819120</td>   <td></td> </tr>
-<tr bgcolor="958a8d">  <td>19/10/14 23:25:39</td>   <td>-3878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.validateProduct([Ljava.lang.String;)[pri:2, instance:com.konakart.script.ProductDetailsScript@56aac163]">validateProduct</td> 
+<tr bgcolor="958a8d">  <td>19/10/15 16:14:44</td>   <td>-1558</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.validateProductDescription([Ljava.lang.String;)[pri:2, instance:com.konakart.script.ProductDetailsScript@56aac163]">validateProductDescription</td> 
   <td>main@917819120</td>   <td></td> </tr>
-<tr bgcolor="958a8d">  <td>19/10/14 23:25:41</td>   <td>-1905</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.validateProduct([Ljava.lang.String;)[pri:2, instance:com.konakart.script.ProductDetailsScript@56aac163]">validateProduct</td> 
+<tr bgcolor="958a8d">  <td>19/10/15 16:14:45</td>   <td>-1170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.validateProductDescription([Ljava.lang.String;)[pri:2, instance:com.konakart.script.ProductDetailsScript@56aac163]">validateProductDescription</td> 
+  <td>main@917819120</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>19/10/15 16:14:45</td>   <td>-778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.validateProductSpecification()[pri:3, instance:com.konakart.script.ProductDetailsScript@56aac163]">validateProductSpecification</td> 
   <td>main@917819120</td>   <td></td> </tr>
 </table>
