--- a/websiteautomation/test-output/old/Suite1/methods-alphabetical.html
+++ b/websiteautomation/test-output/old/Suite1/methods-alphabetical.html
@@ -1,40 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="846679">  <td>19/10/14 23:22:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.click(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@5a1c0542]">click</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>19/10/14 23:22:16</td>   <td>12276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.click(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@5a1c0542]">click</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>19/10/14 23:22:29</td>   <td>25233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.click(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@5a1c0542]">click</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>19/10/14 23:22:42</td>   <td>38276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.click(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@5a1c0542]">click</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>19/10/14 23:22:54</td>   <td>51105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.click(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@5a1c0542]">click</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>19/10/14 23:23:08</td>   <td>64209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.click(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@5a1c0542]">click</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>19/10/14 23:23:21</td>   <td>77862</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.click(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@5a1c0542]">click</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="aeada1">  <td>19/10/14 23:23:50</td>   <td>106190</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.clickOnProductReview()[pri:3, instance:com.konakart.script.ProductDetailsScript@528931cf]">clickOnProductReview</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="aeada1">  <td>19/10/14 23:23:40</td>   <td>96167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.clickOnSlideShow()[pri:1, instance:com.konakart.script.ProductDetailsScript@528931cf]">clickOnSlideShow</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="6c6fbb">  <td>19/10/14 23:21:54</td>   <td>-9104</td> <td>&nbsp;</td><td title="&gt;&gt;DriverClass.configSetup()[pri:0, instance:com.konakart.script.HomePageScript@5a1c0542]">&gt;&gt;configSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="6c6fbb">  <td>19/10/14 23:23:34</td>   <td>91001</td> <td>&nbsp;</td><td title="&gt;&gt;DriverClass.configSetup()[pri:0, instance:com.konakart.script.ProductDetailsScript@528931cf]">&gt;&gt;configSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="6c6fbb">  <td>19/10/14 23:23:59</td>   <td>116056</td> <td title="&lt;&lt;DriverClass.endReport()[pri:0, instance:com.konakart.script.ProductDetailsScript@528931cf]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="aeada1">  <td>19/10/14 23:23:51</td>   <td>108138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@528931cf]">productReview</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="aeada1">  <td>19/10/14 23:23:53</td>   <td>109484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@528931cf]">productReview</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="aeada1">  <td>19/10/14 23:23:55</td>   <td>111569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@528931cf]">productReview</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="aeada1">  <td>19/10/14 23:23:57</td>   <td>113374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@528931cf]">productReview</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="aeada1">  <td>19/10/14 23:23:44</td>   <td>100637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.validateProduct([Ljava.lang.String;)[pri:2, instance:com.konakart.script.ProductDetailsScript@528931cf]">validateProduct</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="aeada1">  <td>19/10/14 23:23:48</td>   <td>104283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.validateProduct([Ljava.lang.String;)[pri:2, instance:com.konakart.script.ProductDetailsScript@528931cf]">validateProduct</td> 
-  <td>main@738433734</td>   <td></td> </tr>
+<tr bgcolor="cd678c">  <td>19/10/15 12:36:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.clickOnProductReview()[pri:3, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">clickOnProductReview</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="cd678c">  <td>19/10/15 12:36:17</td>   <td>-11233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.clickOnSlideShow()[pri:1, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">clickOnSlideShow</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="7faa95">  <td>19/10/15 12:34:31</td>   <td>-117361</td> <td>&nbsp;</td><td title="&gt;&gt;DriverClass.configSetup()[pri:0, instance:com.konakart.script.HomePageScript@56aac163]">&gt;&gt;configSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="7faa95">  <td>19/10/15 12:36:07</td>   <td>-21597</td> <td>&nbsp;</td><td title="&gt;&gt;DriverClass.configSetup()[pri:0, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">&gt;&gt;configSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="7faa95">  <td>19/10/15 12:36:40</td>   <td>11754</td> <td title="&lt;&lt;DriverClass.endReport()[pri:0, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="cd678c">  <td>19/10/15 12:36:31</td>   <td>2197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">productReview</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="cd678c">  <td>19/10/15 12:36:33</td>   <td>4373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">productReview</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="cd678c">  <td>19/10/15 12:36:36</td>   <td>7216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">productReview</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="cd678c">  <td>19/10/15 12:36:37</td>   <td>8479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">productReview</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="cd678c">  <td>19/10/15 12:36:23</td>   <td>-5628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.validateProduct([Ljava.lang.String;)[pri:2, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">validateProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="cd678c">  <td>19/10/15 12:36:26</td>   <td>-2728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.validateProduct([Ljava.lang.String;)[pri:2, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">validateProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>19/10/15 12:34:38</td>   <td>-110136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.validateSearchedProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@56aac163]">validateSearchedProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>19/10/15 12:34:51</td>   <td>-97637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.validateSearchedProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@56aac163]">validateSearchedProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>19/10/15 12:35:04</td>   <td>-84691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.validateSearchedProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@56aac163]">validateSearchedProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>19/10/15 12:35:16</td>   <td>-72285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.validateSearchedProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@56aac163]">validateSearchedProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>19/10/15 12:35:29</td>   <td>-59264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.validateSearchedProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@56aac163]">validateSearchedProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>19/10/15 12:35:41</td>   <td>-47151</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.validateSearchedProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@56aac163]">validateSearchedProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>19/10/15 12:35:55</td>   <td>-33462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.validateSearchedProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@56aac163]">validateSearchedProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
 </table>
