--- a/websiteautomation/test-output/old/Suite1/methods.html
+++ b/websiteautomation/test-output/old/Suite1/methods.html
@@ -1,40 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6c6fbb">  <td>19/10/14 23:21:54</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;DriverClass.configSetup()[pri:0, instance:com.konakart.script.HomePageScript@5a1c0542]">&gt;&gt;configSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>19/10/14 23:22:03</td>   <td>9104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.click(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@5a1c0542]">click</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>19/10/14 23:22:16</td>   <td>21380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.click(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@5a1c0542]">click</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>19/10/14 23:22:29</td>   <td>34337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.click(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@5a1c0542]">click</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>19/10/14 23:22:42</td>   <td>47380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.click(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@5a1c0542]">click</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>19/10/14 23:22:54</td>   <td>60209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.click(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@5a1c0542]">click</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>19/10/14 23:23:08</td>   <td>73313</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.click(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@5a1c0542]">click</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>19/10/14 23:23:21</td>   <td>86966</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.click(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@5a1c0542]">click</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="6c6fbb">  <td>19/10/14 23:23:34</td>   <td>100105</td> <td>&nbsp;</td><td title="&gt;&gt;DriverClass.configSetup()[pri:0, instance:com.konakart.script.ProductDetailsScript@528931cf]">&gt;&gt;configSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="aeada1">  <td>19/10/14 23:23:40</td>   <td>105271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.clickOnSlideShow()[pri:1, instance:com.konakart.script.ProductDetailsScript@528931cf]">clickOnSlideShow</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="aeada1">  <td>19/10/14 23:23:44</td>   <td>109741</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.validateProduct([Ljava.lang.String;)[pri:2, instance:com.konakart.script.ProductDetailsScript@528931cf]">validateProduct</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="aeada1">  <td>19/10/14 23:23:48</td>   <td>113387</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.validateProduct([Ljava.lang.String;)[pri:2, instance:com.konakart.script.ProductDetailsScript@528931cf]">validateProduct</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="aeada1">  <td>19/10/14 23:23:50</td>   <td>115294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.clickOnProductReview()[pri:3, instance:com.konakart.script.ProductDetailsScript@528931cf]">clickOnProductReview</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="aeada1">  <td>19/10/14 23:23:51</td>   <td>117242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@528931cf]">productReview</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="aeada1">  <td>19/10/14 23:23:53</td>   <td>118588</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@528931cf]">productReview</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="aeada1">  <td>19/10/14 23:23:55</td>   <td>120673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@528931cf]">productReview</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="aeada1">  <td>19/10/14 23:23:57</td>   <td>122478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@528931cf]">productReview</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="6c6fbb">  <td>19/10/14 23:23:59</td>   <td>125160</td> <td title="&lt;&lt;DriverClass.endReport()[pri:0, instance:com.konakart.script.ProductDetailsScript@528931cf]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@738433734</td>   <td></td> </tr>
+<tr bgcolor="7faa95">  <td>19/10/15 12:34:31</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;DriverClass.configSetup()[pri:0, instance:com.konakart.script.HomePageScript@56aac163]">&gt;&gt;configSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>19/10/15 12:34:38</td>   <td>7225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.validateSearchedProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@56aac163]">validateSearchedProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>19/10/15 12:34:51</td>   <td>19724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.validateSearchedProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@56aac163]">validateSearchedProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>19/10/15 12:35:04</td>   <td>32670</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.validateSearchedProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@56aac163]">validateSearchedProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>19/10/15 12:35:16</td>   <td>45076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.validateSearchedProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@56aac163]">validateSearchedProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>19/10/15 12:35:29</td>   <td>58097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.validateSearchedProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@56aac163]">validateSearchedProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>19/10/15 12:35:41</td>   <td>70210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.validateSearchedProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@56aac163]">validateSearchedProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>19/10/15 12:35:55</td>   <td>83899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageScript.validateSearchedProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.konakart.script.HomePageScript@56aac163]">validateSearchedProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="7faa95">  <td>19/10/15 12:36:07</td>   <td>95764</td> <td>&nbsp;</td><td title="&gt;&gt;DriverClass.configSetup()[pri:0, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">&gt;&gt;configSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="cd678c">  <td>19/10/15 12:36:17</td>   <td>106128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.clickOnSlideShow()[pri:1, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">clickOnSlideShow</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="cd678c">  <td>19/10/15 12:36:23</td>   <td>111733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.validateProduct([Ljava.lang.String;)[pri:2, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">validateProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="cd678c">  <td>19/10/15 12:36:26</td>   <td>114633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.validateProduct([Ljava.lang.String;)[pri:2, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">validateProduct</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="cd678c">  <td>19/10/15 12:36:28</td>   <td>117361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.clickOnProductReview()[pri:3, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">clickOnProductReview</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="cd678c">  <td>19/10/15 12:36:31</td>   <td>119558</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">productReview</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="cd678c">  <td>19/10/15 12:36:33</td>   <td>121734</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">productReview</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="cd678c">  <td>19/10/15 12:36:36</td>   <td>124577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">productReview</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="cd678c">  <td>19/10/15 12:36:37</td>   <td>125840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDetailsScript.productReview(java.lang.String)[pri:4, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">productReview</td> 
+  <td>main@1045941616</td>   <td></td> </tr>
+<tr bgcolor="7faa95">  <td>19/10/15 12:36:40</td>   <td>129115</td> <td title="&lt;&lt;DriverClass.endReport()[pri:0, instance:com.konakart.script.ProductDetailsScript@7a1ebcd8]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1045941616</td>   <td></td> </tr>
 </table>
